# tutorial-rust

./: .gitignore  Cargo.toml  README.md
adder/src/: guess.rs  lib.rs  rectangle.rs
ch1/hello_world/: main
collections/src/: hashmap.rs  main.rs  string.rs  vectors.rs
crates/ch10_generics/: Cargo.toml
crates/ch11_testing/: Cargo.toml
crates/ch12_cli/: Cargo.toml
crates/ch13_fp/: Cargo.toml
crates/ch14_cargo/: Cargo.toml
crates/ch15_smart_ptr/: Cargo.toml
crates/ch16_concurrency/: Cargo.toml
crates/ch17_async/: Cargo.toml
crates/ch18_oop/: Cargo.toml
crates/ch2_game/: Cargo.toml
crates/ch3_concepts/: Cargo.toml
crates/ch4_ownership/: Cargo.toml
crates/ch5_structs/: Cargo.toml
crates/ch6_enums/: Cargo.toml
crates/ch7_module_types/: Cargo.toml
crates/ch8_collections/: Cargo.toml
crates/ch9_error_handling/: Cargo.toml
enums/src/: main.rs
error_handling/: Cargo.toml
error_handling/src/: main.rs  panic.rs  result.rs
generics_traits_lifetimes/src/: generics.rs  lifetimes.rs  main.rs  traits.rs
guessing_game/src/: main.rs
ownership/src/: arguments.rs  borrowing.rs  main.rs  return_vals.rs  slice.rs  tuple.rs
restaurant/src/: front_of_house.rs  lib.rs
src/ch2/: main.rs
src/ch2_game/: guessing_game.rs
src/ch3_concepts/: concepts.rs  control_flow.rs  data_types.rs  functions.rs  main.rs  variables.rs
src/ch4_ownership/: main.rs  ownership.rs  references.rs  slices.rs
src/ch5_structs/: main.rs  rectangles.rs  struct_def.rs
src/ch6_enums/: enum_def.rs  if_let.rs  main.rs  match_flow.rs
variables/: Cargo.toml
(+53 files in other folders)
