[package]
name = "tutorial-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
log = "0.4.28"
env_logger = "0.11.8"

[[bin]]
name = "guessing_game"
path = "src/ch2_game/guessing_game.rs"

[[bin]]
name = "concepts"
path = "src/ch3_concepts/main.rs"

[[bin]]
name = "ownership"
path = "src/ch4_ownership/main.rs"

[[bin]]
name = "structs"
path = "src/ch5_structs/main.rs"

[[bin]]
name = "enums"
path = "src/ch6_enums/main.rs"

