[workspace]
members = [
    "crates/ch2_game",
    "crates/ch3_concepts",
    "crates/ch4_ownership",
    "crates/ch5_structs",
    "crates/ch6_enums",
    "crates/ch7_module_types",
    "crates/ch8_collections",
    "crates/ch9_error_handling",
    "crates/ch10_generics",
    "crates/ch11_testing", "crates/ch12_cli", "crates/ch13_fp",
]

resolver = "2" # Recommended for newer Rust versions
